objects/ASI_eForm_Running_Number__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_First_Month_of_Fiscal_Year__c</fullName>
        <label>First Month of Fiscal Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Format__c</fullName>
        <label>Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Running_Number__c</fullName>
        <label>Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ASI eForm Running Number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Running Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI eForm  Running Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>